Avoid deprecation warnings on JDK 9 in spring-test